# Palkia

./: .gdb_history  .gitignore  .gitmodules  CMakeLists.txt  todo.txt
app/bench/: CMakeLists.txt  bench_sequential_remote.cc  bench_sequential_swap.cc  common.h
app/stage1/: CMakeLists.txt  test_pod.cc  test_swap.cc
evaluation/: run_seq_remote_rdma.sh  run_seq_swap.sh
include/palkia/: clerk.h  common.h  lru.h  object.h  palkia.h  remote_ptr.h  storage.h  swapable.h
scripts/: build_debug.sh  build_release.sh  run_client.sh  run_server.sh
src/palkia/: CMakeLists.txt  clerk.cc  dialga.cc  dialga.h  lru.cc  object.cc  palkia.cc  storage.cc
src/palkia_service/: CMakeLists.txt  main.cc
